--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,8 @@ python:
   - "3.5"
 install:
   - pip install python-coveralls
+  - pip install Cython
+  - pip install msgpack-python
   - python setup.py install
 script:
   - nosetests --with-doctest -v --with-coverage --cover-package=maxentpy
