--- a/.travis.yml
+++ b/.travis.yml
@@ -3,11 +3,15 @@ python:
   - "2.7"
   - "3.5"
 install:
-  - pip install python-coveralls
   - pip install Cython
   - pip install msgpack-python
+  - pip install pytest
+  - pip install pytest-cov
+  - pip install pytest-flake8
+  - pip install coveralls
   - python setup.py install
 script:
-  - nosetests --with-doctest -v --with-coverage --cover-package=maxentpy
+  - python setup.py build_ext --inplace
+  - pytest --verbose --doctest-modules --flake8 --cov=maxentpy
 after_success:
     - coveralls
