--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,7 @@ install:
   - pip install coveralls
   - python setup.py install
 script:
+  - python setup.py build_ext --inplace
   - pytest --verbose --doctest-modules --flake8 --cov=maxentpy maxentpy
 after_success:
     - coveralls
