--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -29,7 +29,7 @@ jobs:
     - name: Test with pytest
       shell: bash -l {0}
       run: |
-        make test
+          pytest --verbose --doctest-modules --flake8 --cov=maxentpy maxentpy
     - name: Pytest coverage comment
       uses: MishaKav/pytest-coverage-comment@main
       with:
