--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -27,6 +27,7 @@ jobs:
         miniforge-version: 4.10.1-5
         use-mamba: true
     - name: Test with pytest
+      shell: bash -l {0}
       run: | 
         python setup.py build_ext --inplace
         pytest --verbose --doctest-modules --flake8 --cov=maxentpy maxentpy
